<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="6dp"
    android:padding="12dp"
    android:id="@+id/listL">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spProduct"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/shape_gray_border" />

        <EditText
            android:id="@+id/qty"
            android:layout_width="wrap_content"
            android:layout_weight="0.5"
            android:inputType="number"
            android:hint="@string/qty"
            android:gravity="center"
            style="@style/Theme.NavDemo.edt"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/rmView"
            style="@style/Theme.NavDemo.smallBtnAdd"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            app:srcCompat="@drawable/baseline_close_24"
            android:contentDescription="@string/description_btn_add"/>


    </LinearLayout>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/vColor"
            android:text="@string/color"
            style="@style/Theme.NavDemo.textViewRowProduct"
            android:textSize="14sp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/vUom"
            android:text="@string/uom"
            style="@style/Theme.NavDemo.textViewRowProduct"
            android:textSize="14sp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/vGroup"
            android:text="@string/group"
            style="@style/Theme.NavDemo.textViewRowProduct"
            android:textSize="14sp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/vBrand"
            android:text="@string/brand"
            style="@style/Theme.NavDemo.textViewRowProduct"
            android:textSize="14sp"
            android:layout_weight="1"/>

    </TableRow>

</LinearLayout>