<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Input for item name-->

    <TextView
        android:id="@+id/product_name"
        style="@style/Theme.NavDemo.textViewRowProduct"
        android:paddingStart="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:text="@string/p_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry"
        android:textColor="@color/lightBlue_gray_200"/>


    <EditText
        android:id="@+id/edt_item_name"
        style="@style/Theme.NavDemo.edt"
        android:layout_marginTop="8dp"
        android:hint="@string/edt_product_name"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_name" />



    <!-- Input for item suk-->
    <TextView
        android:id="@+id/textView3"
        style="@style/Theme.NavDemo.textViewRowProduct"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:paddingStart="12dp"
        android:text="@string/p_des"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_item_name"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/edt_item_suk"
        style="@style/Theme.NavDemo.edt"
        android:layout_marginTop="8dp"
        android:hint="@string/edt_product_des"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />


    <!-- input item note -->

        <TextView
            android:id="@+id/textView4"
            style="@style/Theme.NavDemo.textViewRowProduct"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            android:paddingStart="12dp"
            android:text="@string/p_note"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_item_suk"
            tools:ignore="RtlSymmetry" />


        <EditText
            android:id="@+id/edt_note"
            style="@style/Theme.NavDemo.edt"
            android:layout_marginTop="8dp"
            android:hint="@string/edt_product_note"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

</androidx.constraintlayout.widget.ConstraintLayout>