<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="4dp">


    <TextView
        android:id="@+id/p_quantity"
        style="@style/Theme.NavDemo.textViewRowProduct"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/quantity"
        android:textColor="@color/darkBlue_gray_700"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/p_description" />

    <TextView
        android:id="@+id/p_color"
        style="@style/Theme.NavDemo.textViewRowProduct"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/color"
        android:textColor="@color/darkBlue_gray_700"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/p_name" />

    <TextView
        android:id="@+id/p_name"
        style="@style/Theme.NavDemo.textViewRowProduct"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/p_name"
        android:textColor="@color/darkBlue_gray_700"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/p_description"
        style="@style/Theme.NavDemo.textViewRowProduct"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/p_des"
        android:textColor="@color/darkBlue_gray_700"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/p_color" />

    <TextView
        android:id="@+id/p_note"
        style="@style/Theme.NavDemo.textViewRowProduct"
        android:layout_width="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:text="@string/confirm_description"
        android:textColor="@color/darkBlue_gray_700"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/p_quantity" />


</androidx.constraintlayout.widget.ConstraintLayout>